<resources>

    <string name="app_name">SpaceX</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Content Descriptions ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

    <string name="imcd_rocket">Space X Rocket</string>
    <string name="imcd_space_x_logo">Space X Logo</string>
    <string name="imcd_shimmer_view">Loading</string>
    <string name="imcd_rocket_image">Rocket Image</string>
    <string name="imcd_arrow">Arrow</string>
    <string name="imcd_bullet_point">Bullet Point</string>

    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Menu Item Names ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

    <string name="menu_item_launches">Launches</string>
    <string name="menu_item_vehicles">Vehicles</string>
    <string name="menu_item_cores">Cores</string>
    <string name="menu_item_about">About the Company</string>
    <string name="menu_item_history">History</string>

    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ LaunchContainerFragment Texts ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

    <string name="launch_type_upcoming">Upcoming</string>
    <string name="launch_type_completed">Completed</string>
    <string name="empty_launches_message">It seems there is no Launches at this moment.\nPlease try again later.</string>

    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~ VehicleContainerFragment Texts ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

    <string name="vehicle_type_rocket">Rockets</string>
    <string name="vehicle_type_capsule">Capsules</string>

    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ItemUpcomingLaunchBinding Texts ~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

    <string name="placeholder_block">Block</string>

    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ItemRocketBinding Texts ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

    <string name="button_rocket_specs">Rocket Specs</string>

    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ItemCapsuleBinding Texts ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

    <string name="placeholder_status">Status</string>
    <string name="placeholder_type">Type</string>

    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ItemCapsuleBinding Texts ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

    <string name="placeholder_rtls_landing">RTLS Landings</string>
    <string name="placeholder_asds_landing">ASDS Landings</string>
    <string name="button_core_specs">Core Specs</string>

    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ AboutCompanyFragment Texts ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

    <string name="placeholder_about_company">About SpaceX</string>
    <string name="placeholder_lead">Lead</string>
    <string name="placeholder_ceo">CEO</string>
    <string name="placeholder_cto">CTO</string>
    <string name="placeholder_cto_propulsion">CTO (Propulsion)</string>
    <string name="placeholder_coo">COO</string>
    <string name="placeholder_statistics">Statistics</string>
    <string name="placeholder_value">Value</string>
    <string name="placeholder_employees">Employees</string>
    <string name="placeholder_testing_sites">Testing Sites</string>
    <string name="placeholder_launch_sites">Launch Sites</string>
    <string name="placeholder_vehicles">Vehicles</string>

    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ItemHistoricEventBinding Texts ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

    <string name="button_historic_event_more_info">More Info</string>

</resources>
