<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_launches"
        android:icon="@drawable/ic_rocket"
        android:orderInCategory="1"
        android:title="@string/menu_item_launches"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item_vehicles"
        android:icon="@drawable/ic_rocket_ship"
        android:orderInCategory="2"
        android:title="@string/menu_item_vehicles"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item_cores"
        android:icon="@drawable/ic_planet"
        android:orderInCategory="2"
        android:title="@string/menu_item_cores"
        app:showAsAction="always" />

</menu>
