<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isExpanded"
            type="Boolean" />

        <variable
            name="rocket"
            type="ritwik.samples.spacex.data.ui.Rocket" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="10dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="10dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="10dp" />

            <ImageView
                android:id="@+id/value_image_rocket"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/imcd_rocket_image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@id/value_text_rocket_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside"
                tools:src="@drawable/ic_space_x_logo" />

            <TextView
                android:id="@+id/value_text_rocket_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto"
                android:text="@{rocket.name}"
                android:textColor="@color/color_text"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/value_text_rocket_summary"
                app:layout_constraintEnd_toStartOf="@id/placeholder_icon_arrow"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/value_image_rocket"
                tools:text="Falcon X" />

            <ImageView
                android:id="@+id/placeholder_icon_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imcd_arrow"
                android:src="@{isExpanded ? @drawable/ic_baseline_keyboard_arrow_up_24 : @drawable/ic_baseline_keyboard_arrow_down_24}"
                app:layout_constraintBottom_toBottomOf="@id/value_text_rocket_name"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@id/value_text_rocket_name"
                app:layout_constraintTop_toTopOf="@id/value_text_rocket_name"
                app:tint="@android:color/black" />

            <TextView
                android:id="@+id/value_text_rocket_summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@{rocket.description}"
                android:textColor="@color/color_text"
                android:textSize="15sp"
                android:visibility="@{isExpanded ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toTopOf="@id/button_rocket_specs"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/value_text_rocket_name"
                tools:text="This is a dummy description of the given rocket.\nThis description can go very wide and varied." />

            <TextView
                android:id="@+id/button_rocket_specs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/button_rocket_specs"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_rocket_ship"
                app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/value_text_rocket_summary" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>
